--- a/src/pln-abstractions/pom.xml
+++ b/src/pln-abstractions/pom.xml
@@ -37,6 +37,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>com.syncprem.uprising.inf-serialization</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>5.2.0</version>
